# bt-text-display

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  README.md
config/freertos/: FreeRTOSConfig.h
config/lvgl/: lv_conf.h
lib/: CMakeLists.txt  FreeRTOSConfig.h  lv_conf.h
src/: CMakeLists.txt  main.c
src/lcd_task/: lcd.c
src/lcd_task/st7796/: st7796.c  st7796.h
src/st7796/: st7796.c  st7796.h
src/tasks/: lcd.c  lcd.h
src/web_api_task/: https_client.c  https_client.h
